# openapi-client-libraries

./: .tool-versions  README.md  pyproject.toml  some-python-client.py
api/: app.py
some-client/: clientapp.py
